<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".fragment.WriteFragment">

    <TextView
            android:id="@+id/tv_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_blank_fragment"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/writefrag_btn_executeTransactionAsync"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/writefrag_btn_executeTransactionAsync"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/writefrag_btn_addpets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/writefrag_btn_addpets"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/writefrag_btn_batchupdates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/writefrag_btn_batchupdates"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/writefrag_btn_showpersoninfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/writefrag_btn_showpersoninfo"/>


</LinearLayout>